--- a/ProductosApp/Views/ProductoView.xaml
+++ b/ProductosApp/Views/ProductoView.xaml
@@ -9,11 +9,35 @@
     <ContentPage.BindingContext>
         <viewModel:ProductoViewModel />
     </ContentPage.BindingContext>
-    
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <ScrollView>
+        <VerticalStackLayout Spacing="10" Padding="15">
+            <Label Text="Formulario de Producto" FontSize="Title" FontAttributes="Bold" HorizontalOptions="Center" />
+
+            <Entry Placeholder="Nombre" Text="{Binding ProductoSeleccionado.Nombre}" />
+            <Entry Placeholder="Descripción" Text="{Binding ProductoSeleccionado.Descripcion}" />
+            <Entry Placeholder="Precio" Text="{Binding ProductoSeleccionado.Precio}" Keyboard="Numeric" />
+
+            <HorizontalStackLayout Spacing="10" HorizontalOptions="Center">
+                <Button FontAttributes="Bold" Text="Guardar" Command="{Binding GuardarProductoCommand}" BackgroundColor="Green" />
+                <Button FontAttributes="Bold" Text="Nuevo" Command="{Binding CrearProductoCommand}" BackgroundColor="Blue" />
+                <Button FontAttributes="Bold" Text="Eliminar" Command="{Binding EliminarProductoCommand}" BackgroundColor="Red" />
+            </HorizontalStackLayout>
+
+            <CollectionView ItemsSource="{Binding ProductoCollection}" SelectedItem="{Binding ProductoSeleccionado, Mode=TwoWay}" SelectionMode="Single" >
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="model:Producto">
+                        <Frame Margin="5" Padding="10" CornerRadius="5" >
+                            <VerticalStackLayout>
+                                <Label Text="{Binding Nombre}" FontAttributes="Bold" />
+                                <Label Text="{Binding Descripcion}" FontSize="Small" />
+                                <Label Text="{Binding Precio, StringFormat='Precio: {0:C}' }" FontSize="Small" />
+                            </VerticalStackLayout>
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
