--- a/ProductosApp/Views/ProductoView.xaml
+++ b/ProductosApp/Views/ProductoView.xaml
@@ -27,13 +27,13 @@
             <CollectionView ItemsSource="{Binding ProductoCollection}" SelectedItem="{Binding ProductoSeleccionado, Mode=TwoWay}" SelectionMode="Single" >
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="model:Producto">
-                        <Frame Margin="5" Padding="10" CornerRadius="5" >
+                        <Border StrokeShape="RoundRectangle 5" StrokeThickness="1" Margin="5" Padding="10" >
                             <VerticalStackLayout>
                                 <Label Text="{Binding Nombre}" FontAttributes="Bold" />
                                 <Label Text="{Binding Descripcion}" FontSize="Small" />
                                 <Label Text="{Binding Precio, StringFormat='Precio: {0:C}' }" FontSize="Small" />
                             </VerticalStackLayout>
-                        </Frame>
+                        </Border>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
